<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TestYourBody</string>
    <string name="welcome">Welcome to TYB</string>
    <string name="welcomeText">This is a message that will be shown to the customer at the moment of sign in or sign up... etc ... etc...</string>
    <string name="learnMore">Learn More</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="repeatPassword">REPEAT PASSWORD</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="logInNoAcc">Already have an Account? Sign In</string>
    <string name="or">or</string>
    <string name="emailRequired">Email is required</string>
    <string name="passwordRequired">Password is required</string>
    <string name="emailNotValid">Please enter a valid email</string>
    <string name="emailLength">Email minimum length is 6</string>
    <string name="passwordNotEquals">Password must be the same</string>
    <string name="calculateBmi">Calculate BMI</string>
    <string name="home">Home</string>
    <string name="heartRateMonitor">Heart Rate Monitor</string>
    <string name="hearingTest">Hearing Test</string>
    <string name="visionTest">Vision Test</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="helpFeedback">Help &amp; feedback</string>
    <string name="logout">Logout</string>
    <string name="infoCredits">Credits</string>
    <string name="homeApplication">Test Your Body</string>
    <string name="infoHeartRateMonitor">Measure your&#xA;Heart Rate</string>
    <string name="infoCalculateBMI">Measure your&#xA;BMI</string>
    <string name="infoVisionTest">Test the accuracy&#xA;of your eyes</string>
    <string name="infoHearingTest">Test the accuracy&#xA;of your ears</string>
    <string name="infoSettings">Change some shit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of students from ITI Severi, Padova</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://pastebin.com/raw/bVDw0GBZ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://pastebin.com/raw/bVDw0GBZ</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://pastebin.com/raw/bVDw0GBZ</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="saved_high_score_key"></string>
    <string name="unitHeight">cm</string>
    <string name="unitWeight">kg</string>
    <string name="unitHeightUK">in</string>
    <string name="unitWeightUK">lb</string>
    <string name="check_to_pass">I accept terms and conditions.</string>
    <string name="error_message">Please accept terms and conditions first.</string>
    <string name="launch_intro_activity">Launch intro activity</string>
    <string name="weightTxt">Weight:</string>
    <string name="heightTxt">Height:</string>
    <string name="normalTxt">Normal</string>
</resources>